# team-mates

./: Cargo.toml  flake.nix  package-lock.json  package.json
tests/: package.json
tests/src/invitations/invitation/: invite.test.ts
ui/: package.json
ui/src/app/components/invitation/list-invitations/: list-invitations.component.html  list-invitations.component.ts
ui/src/app/components/invitation/teams/: teams.component.ts
ui/src/app/services/: holochain.service.ts
ui/src/app/stores/: profile.store.ts
ui/src/environments/: environment.mock.ts  environment.player2.ts  environment.prod.ts
workdir/dna/: dna.yaml
workdir/happ/: happ.yaml
zomes/coordinator/invitations/: Cargo.toml
zomes/coordinator/invitations/src/: lib.rs
zomes/integrity/invitations/: Cargo.toml
zomes/integrity/invitations/src/: lib.rs
zomes/integrity/profiles/: Cargo.toml
