
[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver ="2"
members = ["zomes/coordinator/*", "zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.3"
hdk = "=0.2"
serde = "=1.0.163"

[workspace.dependencies.invitations]
path = "zomes/coordinator/invitations"

[workspace.dependencies.invitations_integrity]
path = "zomes/integrity/invitations"

[workspace.dependencies.profiles]
path = "zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "zomes/integrity/profiles"