[package]
name = "invitations"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "invitations"

[dependencies]
hc_coordinator_zome_invitations = {git = "https://github.com/holochain-open-dev/invitations", branch = "crates-only"}
hdk = { workspace = true }
serde = { workspace = true }
invitations_integrity = { workspace = true }